--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div id="datetime"></div>
         <div id="ipinfo"></div>
         <div class="announcement">
-            <strong>公告：</strong> 这里是您的公告内容，可以根据需要进行更新。
+            <strong>公告：</strong> 欢迎来到Bowen主网，请选择您想去的网站吧！。
         </div>
         <button onclick="window.open('https://www.tech-bowen.com')">Bowen 官网</button>
         <button onclick="window.open('https://blog.tech-bowen.com')">Bowen 博客</button>
@@ -96,7 +96,7 @@
 
     <script>
         // 密码设置
-        const password = 'yourpassword'; // 在此设置密码
+        const password = 'bowen666'; // 在此设置密码
 
         function checkPassword() {
             const userPassword = prompt('请输入密码:');
