--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>警告</h1>
-    <p>您好！您进入了<a href="https://download.tech-bowen.com" target="_blank">https://download.tech-bowen.com</a>的错误界面，请进入正确的界面以获得更好的体验！</p>
+    <p>您好！您进入了<a href="https://tech-bowen.com" target="_blank">https://tech-bowen.com</a>的错误界面，请进入正确的界面以获得更好的体验！</p>
     
     <div class="countdown">
         页面将在 <span id="countdown">30</span> 秒后自动跳转...
@@ -35,7 +35,7 @@
             seconds--;
             document.getElementById("countdown").textContent = seconds;
             if (seconds <= 0) {
-                window.location.href = "https://download.tech-bowen.com";
+                window.location.href = "https://tech-bowen.com";
             }
         }
         setInterval(countdown, 1000);
