--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="announcement">
             <strong>公告：</strong> 欢迎来到Bowen主网，请选择您想去的网站吧！。
         </div>
-        <button onclick="window.open('https://www.tech-bowen.com')">Bowen 官网</button>
+        <button onclick="window.open('https://index.tech-bowen.com')">Bowen 官网</button>
         <button onclick="window.open('https://blog.tech-bowen.com')">Bowen 博客</button>
         <button onclick="checkPassword()">Bowen 下载网</button>
         <button onclick="alert('暂未完善')">Bowen 游戏</button>
