--- a/404.html
+++ b/404.html
@@ -123,14 +123,14 @@
 <body>
     <div class="header">
         <div class="marquee">
-            <span>您访问的网址存在错误，请检查后重新访问。</span>
+            <span>正在使用Tech-bowen的在线字幕服务   Using Tech brown's online subtitle service</span>
         </div>
     </div>
 
     <div class="content">
         <h1>404 - 页面未找到</h1>
         <p>您访问的网址: <span id="error-url"></span> 不存在。</p>
-        <div class="custom-text" id="custom-text">这是一个自定义文本行，您可以在此处添加任何信息。</div>
+        <div class="custom-text" id="custom-text">此网页为Tech-bowen统一404错误网页，请仔细检查您的网址是否正确</div>
         <div class="buttons">
             <a href="https://tech-bowen.com">前往官网</a>
             <a href="mailto:admin@tech-bowen.com">发送邮件</a>
