--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body>
     <div class="header">
         <div class="marquee">
-            <span>正在使用Tech-bowen的在线字幕服务   Using Tech brown's online subtitle service</span>
+            <span>目前该功能正在建设中，为了确保为您提供最佳的使用体验，我们需要更多时间进行调试和完善。请您稍后再试，再次感谢您的耐心和理解！</span>
         </div>
     </div>
 
@@ -118,7 +118,7 @@
         <div id="datetime"></div>
         <div id="ipinfo"></div>
         <div class="announcement">
-            <strong>公告：</strong> 这里是您的公告内容，可以根据需要进行更新。
+            <strong>公告：</strong> Tech-bowen主网及其附属网站均为Github强力驱动(github.com)
         </div>
         <button onclick="window.open('https://index.tech-bowen.com')">Bowen 官网</button>
         <button onclick="window.open('https://blog.tech-bowen.com')">Bowen 博客</button>
