--- a/404.html
+++ b/404.html
@@ -123,7 +123,7 @@
 <body>
     <div class="header">
         <div class="marquee">
-            <span>正在使用Tech-bowen的在线字幕服务   Using Tech brown's online subtitle service</span>
+            <span>目前该功能正在建设中，为了确保为您提供最佳的使用体验，我们需要更多时间进行调试和完善。请您稍后再试，再次感谢您的耐心和理解！</span>
         </div>
     </div>
 
